--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {
     text-align: center;
-    background: linear-gradient( #f08383e7, #d3223a);
+    background: linear-gradient( #4a5a63e7, #48596b);
     margin: 0;
     font-family: 'Raleway', sans-serif;
 }
@@ -38,8 +38,8 @@ nav a {
 nav a:hover{
     font-size: 25px;
     font-weight: bold;
-    text-shadow: 2px 3px 5px rgba(202, 16, 16, 0.733);
-    color: #f7ca33;
+    text-shadow: 2px 3px 5px rgba(61, 102, 114, 0.733);
+    color: #232a2e;
     transition: 0.5s;
 
 }
